<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_something">Add something to make\10me happy :)</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="all_reviews">All Reviews</string>
    <string name="all_rights">© 2020 Tabernam All Rights Reserved</string>
    <string name="app_name">Tabernam</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="awb_number">AWB Number :</string>
    <string name="best_offer">Best Offer</string>
    <string name="bill_details">Bill Details</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_submit">Submit</string>
    <string name="buy">Buy</string>
    <string name="buy_now">Buy Now</string>
    <string name="by">By</string>
    <string name="cancellation_policy_details">Cancellation Policy Details</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_out">Check Out</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_how_to_pay">Choose how to pay</string>
    <string name="choose_rating">Please choose your rating</string>
    <string name="choose_size">Choose Size</string>
    <string name="choose_star_rating">Choose star rating</string>
    <string name="choose_your_payment">Choose Your Payment Option</string>
    <string name="cod">Cash on Delivery</string>
    <string name="color">Color :</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cpb_default_rotation_speed">1</string>
    <string name="cpb_default_sweep_speed">1</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="deals">Deals</string>
    <string name="dealsTxt">Deals :</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Tabernam</string>
    <string name="default_web_client_id">997462167825-du785fin75vaolgpcq3b7cjmg0j0tesv.apps.googleusercontent.com</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="delivery_on">Delivery On</string>
    <string name="description">Description</string>
    <string name="dhl_track">DHL Tracking</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_confirm">Confirm</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_btn_logout">Logout</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_retry">Retry</string>
    <string name="dialog_btn_submit">Submit</string>
    <string name="dialog_change_language">Language</string>
    <string name="dialog_message_delete">Are you sure want to delete?</string>
    <string name="dialog_message_email">Please enter email</string>
    <string name="dialog_message_exit">Are you sure want to exit?</string>
    <string name="dialog_message_logout">Are you sure want to logout?</string>
    <string name="dialog_select_your_language">Select your language</string>
    <string name="dialog_title_connection_error">Connection Error</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_title_email">For your information</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_title_forgot_password">Forgot Password?</string>
    <string name="dialog_title_logout">Logout</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="discount">Discount</string>
    <string name="discount_10_to_20">Discount(10%-20%)</string>
    <string name="enter_confirm_password">Enter Confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_review">Enter your review</string>
    <string name="enter_summary_title">Enter your review title</string>
    <string name="hint_building_name">Building Name</string>
    <string name="hint_city">Select City</string>
    <string name="hint_country">Select Country</string>
    <string name="hint_cpassword">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_locality_area">Locality, Area, Street</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Mobile Number</string>
    <string name="hint_pin_code">Pincode</string>
    <string name="hint_state">State</string>
    <string name="login">Login</string>
    <string name="login_back">Already a member ?</string>
    <string name="no_specification_available">No specification available</string>
    <string name="register">Register</string>
    <string name="review">Review</string>
    <string name="send">Send</string>
    <string name="summary_of_your_review">Summary of your review</string>
    <string name="terms_conditions">By clicking signup i agree to Tabernam Online Shopping Terms and conditions</string>
    <string name="update_profile">Update</string>
</resources>