<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_10" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="10dp" app:cardElevation="3dp" app:cardUseCompatPadding="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabLayout android:id="@+id/gift_tabs" android:layout_width="match_parent" android:layout_height="wrap_content" app:tabGravity="0" app:tabMode="1" app:tabTextAppearance="@style/CustomTextAppearance"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/ratingView" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/dp_10">
            <TextView android:textColor="@color/category_defaullt" android:id="@+id/tvItemDesc" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/choose_star_rating" app:fontFamily="@font/roboto" style="@style/tv"/>
            <androidx.appcompat.widget.AppCompatRatingBar android:id="@+id/rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" android:stepSize="1"/>
            <TextView android:textColor="@color/category_defaullt" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/summary_of_your_review" app:fontFamily="@font/roboto" style="@style/tv"/>
            <EditText android:textColor="@color/category_defaullt" android:id="@+id/etSummary" android:background="@drawable/bg_review" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_summary_title" app:backgroundTint="@null" app:fontFamily="@font/roboto" style="@style/et"/>
            <TextView android:textColor="@color/category_defaullt" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/review" app:fontFamily="@font/roboto" style="@style/tv"/>
            <EditText android:textColor="@color/category_defaullt" android:gravity="top|left|center_vertical|center_horizontal|center|start" android:id="@+id/etDescription" android:background="@drawable/bg_review" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_review" android:lines="5" app:backgroundTint="@null" app:fontFamily="@font/roboto" style="@style/et"/>
            <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="end" android:id="@+id/btnSend" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="@dimen/dp_16" android:text="@string/send" android:paddingStart="@dimen/dp_5" android:paddingEnd="@dimen/dp_5" style="@style/btn"/>
        </LinearLayout>
        <TextView android:textColor="@color/category_defaullt" android:gravity="center" android:id="@+id/tvNoRecord" android:padding="8dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:text="@string/no_specification_available" app:fontFamily="@font/roboto" style="@style/tv"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/dp_10" app:behavior_overlapTop="0dp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
