<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/ic_login_bottom" android:scaleType="fitEnd" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <LinearLayout android:orientation="vertical" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/dp_16">
        <androidx.core.widget.NestedScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/registrationform" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_16">
                <ImageView android:layout_gravity="center" android:layout_width="@dimen/dp_150" android:layout_height="@dimen/dp_150" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="@dimen/dp_16" android:src="@drawable/bag" android:adjustViewBounds="true" android:contentDescription="@string/app_name"/>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etUserName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_name" android:inputType="text" style="@style/et"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_email" android:inputType="textEmailAddress" style="@style/et"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_phone" android:digits="+0123456789" android:inputType="phone" style="@style/et"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etCountry" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_country" android:inputType="text" style="@style/sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etCity" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_city" android:inputType="text" style="@style/sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_password" android:inputType="text" app:fontFamily="@font/roboto" style="@style/et"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etConfirmPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_cpassword" android:inputType="text" app:fontFamily="@font/roboto" style="@style/et"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <CheckBox android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/checkbox" android:paddingLeft="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/terms_conditions"/>
                    <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnSignUp" android:padding="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="@dimen/dp_16" android:text="@string/register" style="@style/btn"/>
                    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16">
                        <TextView android:textSize="15sp" android:textColor="@color/category_defaullt" android:gravity="center" android:paddingLeft="4dp" android:paddingTop="10dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_back" android:paddingStart="4dp" android:paddingEnd="10dp" style="@style/tv"/>
                        <TextView android:textSize="15sp" android:textColor="@color/category_defaullt" android:gravity="center" android:id="@+id/registerButton" android:paddingLeft="4dp" android:paddingTop="10dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:paddingStart="4dp" android:paddingEnd="10dp" app:fontFamily="@font/roboto_medium" style="@style/tv"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
