<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/drawerLayout" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/tool_bar_layout"/>
    <androidx.core.widget.NestedScrollView android:id="@+id/nsv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp">
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etUserName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_name" android:inputType="text" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_email" android:inputType="textEmailAddress" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_phone" android:inputType="numberDecimal" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etBuildingName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_building_name" android:inputType="text" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etLocality" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_locality_area" android:inputType="text" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etCountry" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_country" android:inputType="text" style="@style/sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etCity" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_city" android:inputType="text" style="@style/sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etState" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_state" android:inputType="text" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/etHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:boxStrokeColor="@color/tvToolBar" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText android:textSize="16sp" android:textColor="@color/tvToolBar" android:id="@+id/etPinCode" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_pin_code" android:inputType="number" style="@style/et"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnUpdate" android:padding="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginBottom="@dimen/dp_16" android:text="@string/update_profile" style="@style/btn"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
