<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/etOldPassword" android:background="@drawable/bg_rec" android:padding="@dimen/edit_drawable_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_marginBottom="@dimen/btnHorizontalPadding" android:hint="@string/enter_old_password" android:lines="1" android:inputType="textPassword" android:imeOptions="actionNext"/>
    <EditText android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/etNewPassword" android:background="@drawable/bg_rec" android:padding="@dimen/edit_drawable_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/btnHorizontalPadding" android:layout_marginBottom="@dimen/btnHorizontalPadding" android:hint="@string/enter_new_password" android:lines="1" android:inputType="textPassword" android:imeOptions="actionNext"/>
    <EditText android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/etConfirmPassword" android:background="@drawable/bg_rec" android:padding="@dimen/edit_drawable_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/btnHorizontalPadding" android:layout_marginBottom="40dp" android:hint="@string/enter_confirm_password" android:lines="1" android:inputType="textPassword" android:imeOptions="actionDone"/>
</LinearLayout>
